feat:移除冗余的文件

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -20,6 +20,7 @@
         <action id="AddThisAction" class="com.sohocn.thisifier.actions.AddThisAction"
                 text="Add 'this' to method call" description="Add 'this' prefix to method call">
             <add-to-group group-id="EditorPopupMenu" anchor="after" relative-to-action="CutCopyPasteGroup"/>
+            <keyboard-shortcut keymap="$default" first-keystroke="ctrl alt T"/>
         </action>
     </actions>
 </idea-plugin>
