feat:调整插件说明

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -4,8 +4,8 @@
     <vendor email="215241062@qq.com">龙江湖</vendor>
 
     <description><![CDATA[
-   <p>一个简单的右键点击即可为Java代码中的方法调用添加 'this.' 前缀的插件。</p>
-   <p>A plugin that adds 'this.' prefix to method calls in Java code with a simple right-click.</p>
+    <p>This plugin helps Java developers quickly add the 'this.' prefix to method calls, improving code consistency and readability. Simply right-click and select "Add 'this' prefix to method call" from the context menu to quickly apply it.</p>
+    <p>这个插件帮助Java开发者快速为方法调用添加'this.'前缀，提高代码的一致性和可读性。点击鼠标右键的菜单项 Add 'this' prefix to method call 即可快速添加!</p>
     ]]></description>
 
     <!-- please see https://plugins.jetbrains.com/docs/intellij/plugin-compatibility.html
